--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,12 +67,22 @@ a:hover {
   background: none;
 }
 
+.navbar .nav {
+  margin-left: 30px;
+}
+
 .thumbnail {
   border: none;
   padding: 0;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+}
+
+.product .price {
+  padding-top: 10px;
+  color: red;
+  font-size: 12px;
 }
 
 @media (min-width: 767px) {
