--- a/public/partials/products.html
+++ b/public/partials/products.html
@@ -1,11 +1,11 @@
 <ul class="thumbnails">
   <li class="span5" data-ng-repeat="item in items">
-    <div class="thumbnail">
+    <div class="thumbnail product">
       <a href="#">
         <img data-ng-src="{{item.thumbnail}}" alt="">
       </a>
-      <h6><a data-ng-bind="item.title" href="/products/{{item.url}}"></a></h3>
-      <p class="ng-cloak">${{item.price}} USD</p>
+      <h6 class="pull-left"><a data-ng-bind="item.title" href="/products/{{item.url}}"></a></h6>
+      <p class="ng-cloak pull-right price">${{item.price}} USD</p>
     </div>
   </li>
 </ul>
