--- a/public/partials/products.html
+++ b/public/partials/products.html
@@ -1,11 +1,11 @@
 <ul class="thumbnails">
   <li class="span5" data-ng-repeat="item in items">
     <div class="thumbnail product">
-      <a href="#">
+      <a href="/item/{{item.url}}">
         <img data-ng-src="{{item.thumbnail}}" alt="">
       </a>
-      <h6 class="pull-left"><a data-ng-bind="item.title" href="/products/{{item.url}}"></a></h6>
-      <p class="ng-cloak pull-right price">${{item.price}} USD</p>
+      <h6 class="pull-left"><a data-bind-i18n="{key: 'item.title'+item.sku, _:item.title}" href="/item/{{item.url}}"></a></h6>
+      <p class="ng-cloak pull-right price" data-bind-i18n="{key: 'item.price', price: item.price}"></p>
     </div>
   </li>
 </ul>
