--- a/public/stylesheets/sidenav.css
+++ b/public/stylesheets/sidenav.css
@@ -1,6 +1,8 @@
 
 .sidenav .nav-subcategory {
   margin-left: 12px;
+  text-transform: uppercase;
+  font-size: .82em;
 }
 
 .sidenav .nav-list > .active > a,
