--- a/public/stylesheets/button.css
+++ b/public/stylesheets/button.css
@@ -7,11 +7,22 @@
   cursor: pointer;
   border: 0;
   background: #BAACAC;
+  -webkit-transition: background-color 70ms linear;
+     -moz-transition: background-color 70ms linear;
+      -ms-transition: background-color 70ms linear;
+       -o-transition: background-color 70ms linear;
+          transition: background-color 70ms linear;
 }
 
 .btn.btn-action {
   background: #E01533;
   color: white;
+}
+.btn.btn-action:hover {
+  background: #CA132E;
+}
+.btn.btn-action:active {
+  background: #B61129;
 }
 
 .btn.pull-right {
