Don't pad the images on mobile

--- a/public/stylesheets/category.css
+++ b/public/stylesheets/category.css
@@ -78,6 +78,9 @@
 }
 
 @media (max-width: 768px) {
+  .items .item {
+    padding: 0;
+  }
   .thumbnail [class*="span"] {
     display: inline-block;
   }
