--- a/views/index.jade
+++ b/views/index.jade
@@ -13,3 +13,4 @@ block content
 block prepend scripts
   script(src="//d3dy5gmtp8yhk7.cloudfront.net/2.1.1/sockjs.min.js")
   script(src="//d3dy5gmtp8yhk7.cloudfront.net/2.1/pusher.min.js")
+  script(async, src="//js.balancedpayments.com/v1/balanced.min.js")
