--- a/public/stylesheets/checkout.css
+++ b/public/stylesheets/checkout.css
@@ -32,7 +32,8 @@
   width: 150px;
   text-align: center;
   font-size: 1.2em;
-  color: #EEEEEE;
+  color: #CCCCCC;
+  text-decoration: none;
   -webkit-transition: color 0.4s ease-in-out;
      -moz-transition: color 0.4s ease-in-out;
        -o-transition: color 0.4s ease-in-out;
