--- a/views/index.jade
+++ b/views/index.jade
@@ -11,6 +11,8 @@ block content
       div(data-ng-view="").span10
 
 block prepend scripts
+  script(async
+         src="//js.balancedpayments.com/v1/balanced.min.js"
+         onload="balanced.init('#{balanced}')")
   script(src="//d3dy5gmtp8yhk7.cloudfront.net/2.1.1/sockjs.min.js")
   script(src="//d3dy5gmtp8yhk7.cloudfront.net/2.1/pusher.min.js")
-  script(async, src="//js.balancedpayments.com/v1/balanced.min.js")
