Do some work on the landing page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,3 +9,12 @@ body {
     padding-top: 100px;
   }
 }
+
+.main-container {
+  padding-left: 140px;
+}
+
+.landing img {
+  width: 100%;
+  padding: 10px;
+}
