Switch css files to stylus

--- a/public/stylesheets/index.styl
+++ b/public/stylesheets/index.styl
@@ -1,21 +1,18 @@
-// @import 'nib'
+@import 'nib'
 
-// @import 'button.css'
-// @import 'category.css'
-// @import 'checkout.css'
-// @import 'footer.css'
-// @import 'header.css'
-// @import 'item.css'
-// @import 'lazy-load.css'
-// @import 'main.css'
-// @import 'modal.css'
-// @import 'nav.css'
-// @import 'secondary-nav.css'
-// @import 'time-remaining.css'
-
-body
-  background red
+@import 'button.styl'
+@import 'category.styl'
+@import 'checkout.styl'
+@import 'footer.styl'
+@import 'header.styl'
+@import 'item.styl'
+@import 'lazy-load.styl'
+@import 'main.styl'
+@import 'modal.styl'
+@import 'nav.styl'
+@import 'secondary-nav.styl'
+@import 'time-remaining.styl'
 
 // body
-//   background linear-gradient(top, orange, white)
+//   background linear-gradient(top, red, white)
 
