--- a/public/stylesheets/index.styl
+++ b/public/stylesheets/index.styl
@@ -1,5 +1,6 @@
 @import 'nib'
 
+@import 'variables.styl'
 @import 'button.styl'
 @import 'category.styl'
 @import 'checkout.styl'
@@ -14,5 +15,5 @@
 @import 'time-remaining.styl'
 
 // body
-//   background linear-gradient(top, red, white)
+//   background $background
 
