--- a/public/stylesheets/checkout.styl
+++ b/public/stylesheets/checkout.styl
@@ -13,15 +13,7 @@
   width: 100%
   list-style: none
   position: relative
-  -webkit-transition: all 0.4s ease-in-out
-  -moz-transition: all 0.4s ease-in-out
-  -o-transition: all 0.4s ease-in-out
   transition: all 0.4s ease-in-out
-  -webkit-touch-callout: none
-  -webkit-user-select: none
-  -khtml-user-select: none
-  -moz-user-select: moz-none
-  -ms-user-select: none
   user-select: none
 
 .checkout .steps .step
@@ -31,9 +23,6 @@
   font-size: 1.2em
   color: #CCCCCC
   text-decoration: none
-  -webkit-transition: color 0.4s ease-in-out
-  -moz-transition: color 0.4s ease-in-out
-  -o-transition: color 0.4s ease-in-out
   transition: color 0.4s ease-in-out
 
 .checkout.shipping .steps .step.shipping
@@ -47,24 +36,12 @@
 
 @media (min-width: 768px)
   .checkout.shipping .steps
-    -webkit-transform: translate(0, 0)
-    -moz-transform: translate(0, 0)
-    -o-transform: translate(0, 0)
-    -ms-transform: translate(0, 0)
     transform: translate(0, 0)
 
   .checkout.billing .steps
-    -webkit-transform: translate(-150px, 0)
-    -moz-transform: translate(-150px, 0)
-    -o-transform: translate(-150px, 0)
-    -ms-transform: translate(-150px, 0)
     transform: translate(-150px, 0)
 
   .checkout.confirmation .steps
-    -webkit-transform: translate(-300px, 0)
-    -moz-transform: translate(-300px, 0)
-    -o-transform: translate(-300px, 0)
-    -ms-transform: translate(-300px, 0)
     transform: translate(-300px, 0)
 
 .checkout .forms-container
@@ -73,32 +50,17 @@
 .checkout .forms
   position: relative
   white-space: nowrap
-  -webkit-transition: all 0.4s ease-in-out
-  -moz-transition: all 0.4s ease-in-out
-  -o-transition: all 0.4s ease-in-out
   transition: all 0.4s ease-in-out
 
 .checkout.shipping .forms
-  -webkit-transform: translate(0, 0)
-  -moz-transform: translate(0, 0)
-  -o-transform: translate(0, 0)
-  -ms-transform: translate(0, 0)
   transform: translate(0, 0)
 
 .checkout.billing .forms
   margin-left: -5px
-  -webkit-transform: translate(-100%, 0)
-  -moz-transform: translate(-100%, 0)
-  -o-transform: translate(-100%, 0)
-  -ms-transform: translate(-100%, 0)
   transform: translate(-100%, 0)
 
 .checkout.confirmation .forms
   margin-left: -20px
-  -webkit-transform: translate(-200%, 0)
-  -moz-transform: translate(-200%, 0)
-  -o-transform: translate(-200%, 0)
-  -ms-transform: translate(-200%, 0)
   transform: translate(-200%, 0)
 
 .checkout .forms .form
@@ -106,12 +68,12 @@
   width: 100%
   padding-top: 20px
 
-.checkout .forms .form input
-  padding: 5px
-  display: block
-  margin-bottom: 10px
-  margin-left: auto
-  margin-right: auto
-  width: 200px
-  text-align: center
+  input
+    padding: 5px
+    display: block
+    margin-bottom: 10px
+    margin-left: auto
+    margin-right: auto
+    width: 200px
+    text-align: center
 
