--- a/public/stylesheets/checkout.styl
+++ b/public/stylesheets/checkout.styl
@@ -34,7 +34,7 @@
 .checkout.confirmation .steps .step.confirmation
   color: #E13C32
 
-@media (min-width: 768px)
+@media $media-min-tablet
   .checkout.shipping .steps
     transform: translate(0, 0)
 
