--- a/public/stylesheets/secondary-nav.styl
+++ b/public/stylesheets/secondary-nav.styl
@@ -6,7 +6,7 @@
 .secondary-nav .category
   list-style: none
 
-@media (max-width: 768px)
+@media $media-max-phone
   .secondary-nav
     position: fixed
     background: #f3f3f3
