--- a/public/stylesheets/header.styl
+++ b/public/stylesheets/header.styl
@@ -3,7 +3,7 @@
   font-size: 40%
   line-height: 2.4em
 
-@media (max-width: 768px)
+@media $media-max-phone
   .brand
     position: fixed
     background: white
