--- a/public/stylesheets/index.styl
+++ b/public/stylesheets/index.styl
@@ -1,19 +1,58 @@
-@import 'nib'
+// @import 'nib'
 
-@import 'variables.styl'
-@import 'button.styl'
-@import 'category.styl'
-@import 'checkout.styl'
-@import 'footer.styl'
-@import 'header.styl'
-@import 'item.styl'
-@import 'lazy-load.styl'
-@import 'main.styl'
-@import 'modal.styl'
-@import 'nav.styl'
-@import 'secondary-nav.styl'
-@import 'time-remaining.styl'
+@import 'variables'
+@import 'mixins'
 
-// body
-//   background $background
+@import 'normalize'
+@import 'print'
 
+@import 'scaffolding'
+@import 'type'
+@import 'code'
+@import 'grid'
+@import 'tables'
+@import 'forms'
+@import 'buttons'
+
+@import 'component-animations'
+@import 'glyphicons'
+@import 'dropdowns'
+@import 'button-groups'
+@import 'input-groups'
+@import 'navs'
+@import 'navbar'
+@import 'breadcrumbs'
+@import 'pagination'
+@import 'pager'
+@import 'labels'
+@import 'badges'
+@import 'jumbotron'
+@import 'thumbnails'
+@import 'alerts'
+@import 'progress-bars'
+@import 'media'
+@import 'list-group'
+@import 'panels'
+@import 'wells'
+@import 'close'
+
+@import 'modals'
+@import 'tooltip'
+@import 'popovers'
+@import 'carousel'
+
+@import 'utilities'
+@import 'responsive-utilities'
+
+// @import 'button'
+// @import 'category'
+// @import 'checkout'
+// @import 'footer'
+// @import 'header'
+// @import 'item'
+// @import 'lazy-load'
+// @import 'main'
+// @import 'modal'
+// @import 'nav'
+// @import 'secondary-nav'
+// @import 'time-remaining'
