--- a/public/stylesheets/index.styl
+++ b/public/stylesheets/index.styl
@@ -1,4 +1,5 @@
-// @import 'nib'
+
+json('../../ui.json')
 
 @import 'variables'
 @import 'mixins'
@@ -43,6 +44,13 @@
 
 @import 'utilities'
 @import 'responsive-utilities'
+
+@import 'icons.css'
+
+@import 'nib'
+
+@import '.temp.styl'
+
 
 // @import 'button'
 // @import 'category'
