--- a/public/stylesheets/variables.styl
+++ b/public/stylesheets/variables.styl
@@ -189,6 +189,9 @@ $dropdown-caret-color =           #000;
 // Used for a bird's eye view of components dependent on the z-axis
 // Try to avoid customizing these  =)
 
+$zindex-main =              950;
+$zindex-sidenav =           900;
+
 $zindex-navbar =            1000;
 $zindex-dropdown =          1000;
 $zindex-popover =           1010;
