--- a/public/stylesheets/bootstrap/variables.styl
+++ b/public/stylesheets/bootstrap/variables.styl
@@ -675,3 +675,12 @@ $media-screen-min-lg-desktop = screen-min($screen-lg)
 // Min Max
 $media-tablet = min-max($screen-sm, $screen-sm-max)
 $media-desktop = min-max($screen-md, $screen-md-max)
+
+// Transition stuff
+// --------------------------------------------------
+
+$transition-speed-normal = 0.5s
+$transition-speed-fast   = $transition-speed-normal * .4
+$transition-speed-slow   = $transition-speed-normal * 1.4
+$transition-speed-base   = $transition-speed-normal
+
