--- a/views/layout.jade
+++ b/views/layout.jade
@@ -47,8 +47,7 @@ html(data-ng-app=ngapp)
       block sidenav-contents
 
     main(role="main")
-      menu
-        block brand
+      menu.topmenu
         block topmenu
       block content
 
