--- a/views/index.jade
+++ b/views/index.jade
@@ -16,22 +16,19 @@ block sidenav-handlers
     input(type="checkbox"
           name="handler-#{name}"
           id="handler-#{name}"
-          onclick="null").handler
+          onclick="null"
+          data-ng-model="sidenav.#{name}").handler
   +checkbox("primary")
   +checkbox("secondary")
 
 block sidenav-contents
-  - var _dummy=[ 'asd','zxc','qwe']
-  mixin sidenav(cont, partial, name, dummy)
+  mixin sidenav(cont, partial, name)
     nav(data-ng-controller=cont
         src=partial
         class="sidenav sidenav-#{name}"
         data-ng-include)
-      ul
-        for d in dummy
-          li: a=d
-  +sidenav("NavController", "'/partials/nav.nghtml'", "primary", _dummy)
-  +sidenav("SecondaryNavController", "'/partials/secondary-nav.nghtml'", "secondary", _dummy)
+  +sidenav("NavController", "'/partials/nav.nghtml'", "primary")
+  +sidenav("SecondaryNavController", "'/partials/secondary-nav.nghtml'", "secondary")
 
 block content
   div(data-ng-view).content
