Navbar media queries

--- a/public/stylesheets/bootstrap/labels.styl
+++ b/public/stylesheets/bootstrap/labels.styl
@@ -37,8 +37,8 @@
   label-variant($label-default-bg);
 }
 
-.label-primary {
-  label-variant($label-primary-bg);
+.label-categories {
+  label-variant($label-categories-bg);
 }
 
 .label-success {
