--- a/public/stylesheets/bootstrap/type.styl
+++ b/public/stylesheets/bootstrap/type.styl
@@ -33,7 +33,7 @@ cite    { font-style: normal; }
 
 // Contextual emphasis
 .text-muted          { color: $text-muted; }
-.text-primary        { color: $brand-primary; }
+.text-categories        { color: $brand-categories; }
 .text-warning        { color: $state-warning-text; }
 .text-danger         { color: $state-danger-text; }
 .text-success        { color: $state-success-text; }
