--- a/public/stylesheets/index.styl
+++ b/public/stylesheets/index.styl
@@ -49,7 +49,9 @@ json('../../ui.json')
 
 @import 'nib'
 
-@import '.temp.styl'
+
+@import 'layout'
+@import 'landing'
 
 
 // @import 'button'
@@ -62,5 +64,6 @@ json('../../ui.json')
 // @import 'main'
 // @import 'modal'
 // @import 'nav'
-// @import 'secondary-nav'
+// @import 'nav-links'
 // @import 'time-remaining'
+
