--- a/public/stylesheets/bootstrap/button-groups.styl
+++ b/public/stylesheets/bootstrap/button-groups.styl
@@ -10,7 +10,7 @@
   .btn-default & {
     border-top-color: $btn-default-color;
   }
-  .btn-primary &,
+  .btn-categories &,
   .btn-success &,
   .btn-warning &,
   .btn-danger &,
@@ -22,7 +22,7 @@
   & .btn-default .caret {
     border-bottom-color: $btn-default-color;
   }
-  .btn-primary,
+  .btn-categories,
   .btn-success,
   .btn-warning,
   .btn-danger,
