--- a/public/stylesheets/bootstrap/buttons.styl
+++ b/public/stylesheets/bootstrap/buttons.styl
@@ -57,8 +57,8 @@
 .btn-default {
   button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
 }
-.btn-primary {
-  button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
+.btn-categories {
+  button-variant($btn-categories-color, $btn-categories-bg, $btn-categories-border);
 }
 // Warning appears as orange
 .btn-warning {
