--- a/public/stylesheets/bootstrap/panels.styl
+++ b/public/stylesheets/bootstrap/panels.styl
@@ -131,8 +131,8 @@
 .panel-default {
   panel-variant($panel-default-border, $panel-default-text, $panel-default-heading-bg, $panel-default-border);
 }
-.panel-primary {
-  panel-variant($panel-primary-border, $panel-primary-text, $panel-primary-heading-bg, $panel-primary-border);
+.panel-categories {
+  panel-variant($panel-categories-border, $panel-categories-text, $panel-categories-heading-bg, $panel-categories-border);
 }
 .panel-success {
   panel-variant($panel-success-border, $panel-success-text, $panel-success-heading-bg, $panel-success-border);
