--- a/public/stylesheets/bootstrap/secondary-nav.styl
+++ b/public/stylesheets/bootstrap/secondary-nav.styl
@@ -1,13 +1,13 @@
-.secondary-nav
+.nav-links
   width: 300px
   display: inline-block
   font-weight: bold
 
-.secondary-nav .category
+.nav-links .category
   list-style: none
 
 @media $media-max-phone
-  .secondary-nav
+  .nav-links
     position: fixed
     background: #f3f3f3
     border-top: 1px #ccc solid
@@ -23,7 +23,7 @@
     white-space: nowrap
     padding: 0 10px
 
-  .secondary-nav .category
+  .nav-links .category
     display: inline-block
     font-size: .8em
     text-transform: uppercase
@@ -31,5 +31,5 @@
     padding-left: 1em
     text-indent: -1em
 
-  // .secondary-nav .category .active
+  // .nav-links .category .active
 
