--- a/public/stylesheets/bootstrap/variables.styl
+++ b/public/stylesheets/bootstrap/variables.styl
@@ -19,7 +19,8 @@ $gray-lighter =           lighten(#000, 93.5%); // #eee
 // Brand colors
 // -------------------------
 
-$brand-primary =         #428bca;
+$brand-color =           #00BBEB;
+$brand-categories =      #428bca;
 $brand-success =         #5cb85c;
 $brand-warning =         #f0ad4e;
 $brand-danger =          #d9534f;
@@ -83,7 +84,7 @@ $border-radius-base =             4px;
 $border-radius-large =            6px;
 $border-radius-small =            3px;
 
-$component-active-bg =            $brand-primary;
+$component-active-bg =            $brand-categories;
 
 $caret-width-base =               4px;
 $caret-width-large =              5px;
@@ -111,9 +112,9 @@ $btn-default-color =              #333;
 $btn-default-bg =                 #fff;
 $btn-default-border =             #ccc;
 
-$btn-primary-color =              #fff;
-$btn-primary-bg =                 $brand-primary;
-$btn-primary-border =             darken($btn-primary-bg, 5%);
+$btn-categories-color =              #fff;
+$btn-categories-bg =                 $brand-categories;
+$btn-categories-border =             darken($btn-categories-bg, 5%);
 
 $btn-success-color =              #fff;
 $btn-success-bg =                 $brand-success;
@@ -189,8 +190,10 @@ $dropdown-caret-color =           #000;
 // Used for a bird's eye view of components dependent on the z-axis
 // Try to avoid customizing these  =)
 
+$zindex-sidenav-bg =        900;
+$zindex-sidenav-fg =        $zindex-sidenav-bg + 100;
 $zindex-main =              950;
-$zindex-sidenav =           900;
+$zindex-brand =             1060;
 
 $zindex-navbar =            1000;
 $zindex-dropdown =          1000;
@@ -251,7 +254,7 @@ $navbar-padding-vertical =          (($navbar-height - $line-height-computed) / 
 
 // Navbar links
 $navbar-default-link-color =                #777;
-$navbar-default-link-hover-color =          #333;
+$navbar-default-link-hover-color =          $brand
 $navbar-default-link-hover-bg =             transparent;
 $navbar-default-link-active-color =         #555;
 $navbar-default-link-active-bg =            darken($navbar-default-bg, 6.5%);
@@ -340,7 +343,7 @@ $pagination-border =                    #ddd;
 
 $pagination-hover-bg =                  $gray-lighter;
 
-$pagination-active-bg =                 $brand-primary;
+$pagination-active-bg =                 $brand-categories;
 $pagination-active-color =              #fff;
 
 $pagination-disabled-color =            $gray-light;
@@ -414,7 +417,7 @@ $popover-arrow-outer-fallback-color =  #999;
 // -------------------------
 
 $label-default-bg =            $gray-light;
-$label-primary-bg =            $brand-primary;
+$label-categories-bg =            $brand-categories;
 $label-success-bg =            $brand-success;
 $label-info-bg =               $brand-info;
 $label-warning-bg =            $brand-warning;
@@ -468,7 +471,7 @@ $alert-danger-border =         $state-danger-border;
 $progress-bg =                 #f5f5f5;
 $progress-bar-color =          #fff;
 
-$progress-bar-bg =             $brand-primary;
+$progress-bar-bg =             $brand-categories;
 $progress-bar-success-bg =     $brand-success;
 $progress-bar-warning-bg =     $brand-warning;
 $progress-bar-danger-bg =      $brand-danger;
@@ -501,9 +504,9 @@ $panel-default-text =          $gray-dark;
 $panel-default-border =        #ddd;
 $panel-default-heading-bg =    #f5f5f5;
 
-$panel-primary-text =          #fff;
-$panel-primary-border =        $brand-primary;
-$panel-primary-heading-bg =    $brand-primary;
+$panel-categories-text =          #fff;
+$panel-categories-border =        $brand-categories;
+$panel-categories-heading-bg =    $brand-categories;
 
 $panel-success-text =          $state-success-text;
 $panel-success-border =        $state-success-border;
@@ -673,7 +676,8 @@ $media-screen-min-desktop = screen-min($screen-md)
 $media-screen-min-lg-desktop = screen-min($screen-lg)
 
 // Min Max
-$media-tablet = min-max($screen-sm, $screen-sm-max)
+// $media-tablet = min-max($screen-sm, $screen-sm-max)
+$media-tablet = min-max($screen-sm, $screen-md-max)
 $media-desktop = min-max($screen-md, $screen-md-max)
 
 // Transition stuff
