--- a/views/index.jade
+++ b/views/index.jade
@@ -1,19 +1,75 @@
-extends ../node_modules/theme-origami/layout.jade
+//- block content
+//-   #main
+//-     div(data-ng-include="", src="'/partials/sidenav.nghtml'").sidenav-container
+//-     .container-fluid.main-container
+//-       .row-fluid
+//-         div(data-ng-view="").span12
 
-block nav
-  div(data-ng-controller="NavLinksController")
-    div(data-ng-include="", src="'/partials/nav.nghtml'")
-  
-block content
-  #main
-    div(data-ng-include="", src="'/partials/sidenav.nghtml'").sidenav-container
-    .container-fluid.main-container
-      .row-fluid
-        div(data-ng-view="").span12
+//- block prepend scripts
+//-   script(async
+//-          src="//js.balancedpayments.com/v1/balanced.min.js"
+//-          onload="balanced.init('#{balanced}')")
+//-   script(src="//d3dy5gmtp8yhk7.cloudfront.net/2.1.1/sockjs.min.js")
+//-   script(src="//d3dy5gmtp8yhk7.cloudfront.net/2.1/pusher.min.js")
 
-block prepend scripts
-  script(async
-         src="//js.balancedpayments.com/v1/balanced.min.js"
-         onload="balanced.init('#{balanced}')")
-  script(src="//d3dy5gmtp8yhk7.cloudfront.net/2.1.1/sockjs.min.js")
-  script(src="//d3dy5gmtp8yhk7.cloudfront.net/2.1/pusher.min.js")
+!!! 5
+html(data-ng-app=ngapp)
+  head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+    title(ng-bind="'FLOKK | ' + $root.title") FLOKK | #{title}
+    meta(name='description', content=description)
+    meta(name='author', content='The Flokk, LLC')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
+
+    //- TODO figure out the favicon
+    link(href="http://fonts.googleapis.com/css?family=Bree+Serif", rel="stylesheet", type="text/css")
+    link(href="http://686project.com/demos/686tees/assets/css/entypo.css", rel="stylesheet", type="text/css")
+
+    block styles
+      each style in styles
+        link(href=style, rel="stylesheet")
+
+    script.
+      // Stupid hack for facebook login
+      if (window.location.hash === '#_=_') window.location.hash = '';
+      // Track page load time
+      var startTime = Date.now();
+      // Initialize the environment
+      window.env = !{JSON.stringify(env)};
+  body(data-ng-controller="IndexController")
+    
+    .container
+      //- Site top
+      .row
+        .span12(data-ng-controller="NavLinksController", data-ng-include="", src="'/partials/nav.nghtml'")
+
+      //- Header
+      .row
+        .span4.brand
+          a(href="/")
+            .company.logo FLOKK
+
+      //- Menu
+      .row
+        div(data-ng-include="", src="'/partials/sidenav.nghtml'").span12
+
+      div(data-ng-view="")
+
+      .row.footer
+        .span6
+          ul.footer-nav
+            li
+              a(href="/contact") Terms &amp; Conditions
+            li
+              a(href="/contact") Contact
+        .span6.footer-right
+          p &copy; The Flokk
+
+    block scripts
+      each script in scripts
+        script(src=script)
+
+    script.
+      // End page load timing
+      if (window.metric) metric({'measure': 'page_load_time', val: (Date.now() - startTime), units: 'ms'});
