Give the logo some space

--- a/public/stylesheets/686tees.css
+++ b/public/stylesheets/686tees.css
@@ -104,6 +104,10 @@ a:hover {
 	color: #CCC;
 }
 
+.menu {
+	margin-top: 10px;
+}
+
 /*--------------------------------
 	Mini Basket
 ---------------------------------*/
