--- a/views/index.jade
+++ b/views/index.jade
@@ -22,7 +22,7 @@ html(data-ng-app=ngapp)
     meta(name='author', content='The Flokk, LLC')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
 
-    //- TODO figure out the favicon
+    link(rel="icon", href="https://d31bm31dglrbv6.cloudfront.net/favicon.ico", type="image/x-icon")
 
     block styles
       each style in styles
